--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.5.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
-    "jest-dom": "^4.0.0",
-    "jest-environment-jsdom": "^29.5.0"
+    "jest-environment-jsdom": "^29.5.0",
+    "prettier": "^2.8.8"
   }
 }
