--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.0",
+    "react-input-mask": "^2.0.4",
     "sass": "^1.63.4",
     "typescript": "5.1.3"
   },
@@ -29,6 +31,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/react-input-mask": "^3.0.2",
     "babel-jest": "^29.5.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
