--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,7 @@
     "next/core-web-vitals",
     "prettier",
     "plugin:prettier/recommended",
-    "plugin:jsx-a11y/recommended",
-    "plugin:css-modules/recommended"
+    "plugin:jsx-a11y/recommended"
   ],
   "plugins": ["prettier"],
   "rules": {
