--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "next": "13.4.6",
+    "nextjs-progressbar": "0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
+    "react-hot-toast": "^2.4.1",
     "react-input-mask": "^2.0.4",
     "sass": "^1.63.4",
     "typescript": "5.1.3"
