--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-hot-toast": "^2.4.1",
     "react-input-mask": "^2.0.4",
     "sass": "^1.63.4",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.1",
