--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:clear": "jest --clearCache"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
@@ -27,7 +28,8 @@
     "react-input-mask": "^2.0.4",
     "sass": "^1.63.4",
     "typescript": "5.1.3",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.1",
